# ai_seach_agent

./: .env.example  .gitignore  =2.4.0  README.md  docker-compose.yml  pyproject.toml
examples/: curl_search.sh
scripts/: debug.py  run_api.sh  setup_privoxy.sh  test_bge.py  test_pack_materials.py  test_select_evidence.py
searxng/: Dockerfile  settings.yml
src/ai_search_agent/: api.py  bge_db.py  config.py  crawler.py  graph.py  http_client.py  llm.py  searxng.py  text.py
src/ai_search_agent/web/: app.js  index.html  style.css
